# Algorithms

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.gitlab/issue_templates/: Pipeline failed.md
Sorting/: CMakeLists.txt  bubble.h  heap.h  insertion.h  merge.h  quick.h  selection.h
test/: CMakeLists.txt  CMakeLists.txt.in
test/Sorting/: CMakeLists.txt  bubble.cpp  heap.cpp  insertion.cpp  merge.cpp  run.sh
